# gpuroofperf-toolkit

./: README.md
bench/: CMakeLists.txt  benchmark_manager.cpp  benchmark_manager.h  cache_kernels.cu  cache_kernels.h  computation_kernels.cu  computation_kernels.h  cuda_common.h  dram_kernels.cu  dram_kernels.h  kernels_common.h  main.cpp  shmem_kernels.cu  shmem_kernels.h
tool/: gpu_parameter_loader.py  gpuroofperf-cli.py  kernel_inspector.py  kernel_parameters.py  performance_predictor.py  profiling_executor.py
